--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arount the US</title>
     <meta name="description" content="Alrededor de los EE.UU.">
-    <meta name="keywords" content="Lagos, Montañas, Valles">
+    <meta name="keywords" content="Lagos, Montañas, Valles, development">
     <meta name="author" content="Jorge Dávila">
     <link rel="stylesheet" href="./pages/index.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
