--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 >
                 <div class="card__elements">
                   <p class="card__text">Valle de Yosemite</p>
-                  <button class="card__button card__button--active"></button>
+                  <button class="button-liked" id="like-button"></button>
                 </div>
               </div>
           </div>
@@ -68,7 +68,7 @@
                 >
                 <div class="card__elements">
                   <p class="card__text">Lago Lousite</p>
-                  <button class="card__button card__button--active"></button>
+                  <button class="button-liked" id="like-button"></button>
                 </div>
               </div>
           </div>
@@ -80,7 +80,7 @@
               >
               <div class="card__elements">
                 <p class="card__text">Monta&ntilde;as Calvas</p>
-                <button class="card__button card__button--active"></button>
+                <button class="button-liked" id="like-button"></button>
               </div>
             </div>
           </div>
@@ -92,7 +92,7 @@
               >
               <div class="card__elements">
                 <p class="card__text">Latemar</p>
-                <button class="card__button card__button--active"></button>
+                <button class="button-liked" id="like-button"></button>
               </div>
             </div>
           </div>          
@@ -104,7 +104,7 @@
               >
               <div class="card__elements">
                 <p class="card__text">Vanois National...</p>
-                <button class="card__button card__button--active"></button>
+                <button class="button-liked" id="like-button"></button>
               </div>
             </div>
           </div>             
@@ -116,7 +116,7 @@
               >
               <div class="card__elements">
                 <p class="card__text">Lago di Braies</p>
-                <button class="card__button card__button--active"></button>
+                <button class="button-liked" id="like-button"></button>
               </div>
             </div>
           </div>             
