--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 alt="Vanois National"
               >
               <div class="card__elements">
-                <p class="card__text">Vanois National...</p>
+                <p class="card__text">Vanois National Park</p>
                 <button class="button-liked" id="like-button"></button>
               </div>
             </div>
